@@ -7,8 +7,6 @@
 package de.uib.configed.gui.features.clientselection.elements;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.LinkedList;
 import java.util.List;
 
 import de.uib.configed.gui.features.clientselection.AbstractSelectElement;
@@ -20,12 +18,12 @@ public class GenericEnumElement extends AbstractSelectElement {
 
 	public GenericEnumElement(String[] enumData, String[] name, String... localizedName) {
 		super(name, localizedName);
-		this.enumData = new ArrayList<>(Arrays.asList(enumData));
+		this.enumData = new ArrayList<>(List.of(enumData));
 	}
 
 	@Override
 	public List<AbstractSelectOperation> supportedOperations() {
-		List<AbstractSelectOperation> result = new LinkedList<>();
+		List<AbstractSelectOperation> result = new ArrayList<>();
 		result.add(new StringEqualsOperation(this));
 		return result;
 	}
